# internal/controllers/role_controller.go
@@ -17,6 +17,17 @@ func NewRoleController(roleService ps.IRoleService) *roleController {
 	}
 }
 
+// @BasePath /roles
+// @Summary Get all roles
+// @Security BearerAuth
+// @Tags Roles
+// @Accept json
+// @Produce json
+// @Success 200 {object} roleResponse1
+// @Failure 401 {object} errorResponse
+// @Failure 400 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Router /roles/ [get]
 func (u *roleController) ListHandler(c *gin.Context) {
 	users, err := u.roleService.ListExecute(c.Request.Context())
 	if err != nil {
