# internal/routes/role_routes.go
@@ -4,6 +4,7 @@ import (
 	"github.com/PedroMartiniano/ecommerce-api-users/internal/adapters"
 	"github.com/PedroMartiniano/ecommerce-api-users/internal/configs"
 	"github.com/PedroMartiniano/ecommerce-api-users/internal/controllers"
+	"github.com/PedroMartiniano/ecommerce-api-users/internal/middlewares"
 	"github.com/gin-gonic/gin"
 )
 
@@ -11,5 +12,5 @@ func roleRoutes(router *gin.RouterGroup) {
 	roleService := adapters.NewRoleServiceAdapter(configs.DB)
 	roleController := controllers.NewRoleController(roleService)
 
-	router.GET("/", roleController.ListHandler)
+	router.GET("/", middlewares.VerifyJWT, roleController.ListHandler)
 }
